# H.D.D-System-cpp

./: .gitignore  CMakeLists.txt  README.md  aboutscreen.cpp  aboutscreen.h  aboutscreen.ui  code.cpp  code.h  connectscreen.cpp  connectscreen.h  connectscreen.ui  exitscreen.cpp  exitscreen.h  exitscreen.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintwidget.cpp  paintwidget.h  res.qrc  sysinfo.cpp  sysinfo.h  titlescreen.cpp  titlescreen.h  titlescreen.ui  uiconfig.cpp  uiconfig.h
